<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtViewName"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewStrength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtViewStrength"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewTechnicalProwess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtViewTechnical"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLike" />

        <Button
            android:id="@+id/buttonDislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDislike" />

    </LinearLayout>
</LinearLayout>
